fix(DataTable): allow content to overflow table container

--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -24,6 +24,10 @@
 
   .#{$prefix}--data-table-content {
     overflow-x: auto;
+
+    @include carbon--breakpoint(md) {
+      overflow: visible;
+    }
   }
 
   //----------------------------------------------------------------------------
